# davos

./: .gitignore  Makefile.am  autogen.sh  configure.ac  meson.build  meson_options.txt
.github/workflows/: build.yml
debian/: .gitignore  changelog  cm4all-davos-doc.install  cm4all-davos-od.install  cm4all-davos-plain.install  control  rules
doc/: Makefile  conf.py  davos.xml  index.rst
src/: Chrono.hxx  ETag.cxx  ETag.hxx  IfMatch.cxx  IfMatch.hxx  IsolatePath.cxx  IsolatePath.hxx  PivotRoot.cxx  PivotRoot.hxx  PlainBackend.cxx  PlainBackend.hxx  PreconditionResult.hxx  date.c  directory.cxx  directory.hxx  error.cxx  error.hxx  expat.cxx  expat.hxx  file.cxx  file.hxx  frontend.hxx  get.cxx  get.hxx  lock.cxx  lock.hxx  main.cxx  mime_types.cxx  mime_types.hxx  od_backend.hxx  od_create.cxx  od_main.cxx  od_put.cxx  od_resource.cxx  od_resource.hxx  other.cxx  other.hxx  propfind.cxx  propfind.hxx  proppatch.cxx  (+14 more)
src/util/: LightString.hxx  UriEscape.cxx  UriEscape.hxx
subprojects/: .gitignore
test/: .gitignore  meson.build  t_uri_escape.cxx
